# claude-code-cat

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE.md  README.md  SPECIFICATION.md  STATE.md  VERSION.md  emoji-widths.json  package-lock.json  package.json  pyproject.toml  run_tests.py
.claude/: settings.json  statusline-command.sh
.claude-plugin/: marketplace.json  plugin.json
client/: build-jlink.sh  build.sh  pom.xml
commands/: add-major-version.md  add-minor-version.md  add-task.md  add.md  cleanup.md  config.md  execute-task.md  help.md  init.md  remove-major-version.md  remove-minor-version.md  remove-task.md  remove.md  research.md  status.md  work.md
docs/: LICENSE-KEY-SPEC.md  PRICING-STRATEGY.md  PRICING.md  demo-task-management.html  index.html  pricing.html  product-key-specification.md  showcase-template.html
engine/: build-jlink.sh  build.sh
hooks/: .gitignore  auto-learn-from-mistakes.sh  block-lock-manipulation.sh  block-main-rebase.sh  block-merge-commits.sh  block-reflog-destruction.sh  build-jlink.sh  build.sh  check-emoji-widths.sh  check-upgrade.sh  detect-giving-up.sh  detect-sequential-tools.sh  detect-user-reported-issue.sh  echo-session-id.sh  hooks.json  inject-session-instructions.sh  pom.xml  restore-todowrite.sh  session-unlock.sh  show-license-notice.sh  validate-commit-type.sh  validate-git-filter-branch.sh  validate-rebase-target.sh  validate-worktree-branch.sh  verify-state-in-commit.sh  warn-main-agent-edit.sh  warn-merge-commits.sh
migrations/: 2.0.10.sh  2.0.8.sh  2.0.9.sh  2.0.sh  2.1.0.sh  registry.json
(+2315 files in other folders)
